--- a/src/main/resources/templates/country/detail.html
+++ b/src/main/resources/templates/country/detail.html
@@ -12,8 +12,8 @@
             <tr><th>国名</th><td><input type="text" name="name" th:value="*{name}"></td></tr>
             <tr><th>人口</th><td><input type="text" name="population" th:value="*{population}"></td></tr>
         </table>
-        <td><button type="submit">送信</button></td>
-        <td><a th:href="@{/country/list}">一覧に戻る</a></td>
+        <button type="submit">送信</button>
+        <a th:href="@{/country/list}">一覧に戻る</a>
     </form>
 </body>
 </html>
